# prime-memory-folding

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  build-card.md
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_filters.py
docs/: ARCHITECTURE.md  CLAUDE_SELECTOR_PLAN.md  DECOUPLING_MAP.md  EVIDENCE_MANIFEST.md  GITHUB_RELEASE_CHECKLIST.md  MCP_IDE_SETUP.md  PUBLIC_THESIS.md  TECHNICAL_REPRODUCIBILITY_THESIS.md  TECHNICAL_WHITEPAPER.md
evidence/: README.md
evidence/api/services/impact/: prime_metrics_cache.py
evidence/docs/architecture/: PRIME_ENCODED_KNOWLEDGE_ARCHITECTURE_ANALYSIS.md  PRIME_ENCODING_DECISION_BRIEF.md  PRIME_KNOWLEDGE_GRAPH_ANALYSIS.md  prime_vs_traditional_comparison.txt
examples/: basic_usage.py
ide/claude/: claude_desktop_config.example.json
ide/jetbrains/: mcp.json
prime_memory_folding/: __init__.py  address.py  cli.py  folding.py  mcp_server.py  primes.py  sqlite_store.py  store.py  system.py  vectors.py
tests/: test_benchmarks.py  test_core.py  test_mcp_server.py  test_sqlite_store.py  test_tag_products.py
