[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prime-memory-folding"
version = "0.1.0"
description = "Standalone prime-addressed memory encoding with vector-aware folding and MCP IDE integration."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Aether-Hyper Prime Memory Folding Contributors"}
]
keywords = ["mcp", "memory", "prime-encoding", "vector-search", "ide", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
prime-memory = "prime_memory_folding.cli:main"
prime-memory-mcp = "prime_memory_folding.mcp_server:main"

[tool.setuptools.packages.find]
include = ["prime_memory_folding*"]
